Fix text spacing

--- a/portfolio/assets/css/styles.css
+++ b/portfolio/assets/css/styles.css
@@ -3,7 +3,7 @@
 * {
     font-family: "SF-Pro-Display-Regular", Arial, Helvetica, sans-serif;
     line-height: 1.6;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.1px;
 }
 
 body {
